force-app/main/default/objects/Community_Schedule__c/Community_Schedule__c.object-meta.xml
<CustomObject>
    <label>Community Schedule</label>
    <nameField>
        <displayFormat>Community Sched #-{00000}</displayFormat>
        <label>Community Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>