force-app/main/default/objects/Community_Schedule__c/fields/Community_Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Community_Schedule_End_Date__c</fullName>
    <label>Community Schedule End Date</label>
    <type>Date</type>
</CustomField>