force-app/main/default/objects/Community_Schedule__c/fields/Community_Schedule_Generated__c.field-meta.xml
<CustomField>
    <fullName>Community_Schedule_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Schedule Generated</label>
    <type>Checkbox</type>
</CustomField>