force-app/main/default/objects/Community_Schedule__c/fields/Community_Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Community_Schedule_Notes__c</fullName>
    <label>Community Schedule Notes</label>
    <type>TextArea</type>
</CustomField>