force-app/main/default/objects/Community_Schedule__c/fields/Community_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Community_Schedule_Start_Date__c</fullName>
    <label>Community Schedule Start Date</label>
    <type>Date</type>
</CustomField>