force-app/main/default/objects/Community_Schedule__c/validationRules/Community_Schedule_Date_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Schedule_Date_Change</fullName>
    <active>true</active>
    <errorConditionFormula>(ischanged( Community_Schedule_Start_Date__c )

||

ischanged( Community_Schedule_End_Date__c ))

&amp;&amp;

Community_Schedule_Generated__c = TRUE</errorConditionFormula>
    <errorMessage>This Community Schedule needs to be reset in order to change the dates.</errorMessage>
</ValidationRule>