force-app/main/default/objects/Community_Schedule__c/validationRules/Community_Schedule_Generated_and_Reset.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Schedule_Generated_and_Reset</fullName>
    <active>true</active>
    <errorConditionFormula>ischanged(Community_Schedule_Generated__c)

&amp;&amp;

Community_Schedule_Reset__c = TRUE</errorConditionFormula>
    <errorMessage>Please uncheck &quot;Community Schedule Reset&quot;.</errorMessage>
</ValidationRule>