force-app/main/default/objects/Community_Schedule__c/validationRules/Community_Schedule_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Schedule_Period</fullName>
    <active>true</active>
    <errorConditionFormula>(month(Community_Schedule_End_Date__c) &lt;&gt; month( Community_Schedule_Start_Date__c))

||

(year(Community_Schedule_End_Date__c) &lt;&gt; year( Community_Schedule_Start_Date__c))</errorConditionFormula>
    <errorMessage>A community schedule can only be set for, at max, one month at a time. Please review start and end dates.</errorMessage>
</ValidationRule>