force-app/main/default/objects/Community_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Community_Schedule_Start_Date__c</columns>
    <columns>Community_Schedule_End_Date__c</columns>
    <columns>Community_Schedule_Generated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>